--- a/src/components/Modal/style.module.css
+++ b/src/components/Modal/style.module.css
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    z-index: 999;
 }
 
 .closeIcon {
@@ -65,4 +66,32 @@
 }
 .active{
     color:green !important;
+}
+
+.gallerySlider{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+.background{
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(29, 29, 29, 0.434);
+    z-index: 888;
+}
+.downloadBtn{
+    margin-left: 10px;
+    color:green;
+    border: 1px solid rgb(128, 128, 128);
+    border-radius: 10px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.downloadBtn:hover{
+    background-color: rgba(128, 128, 128, 0.458);
 }
