--- a/src/components/Gallery/style.module.css
+++ b/src/components/Gallery/style.module.css
@@ -2,6 +2,21 @@
     column-count: 3;
     column-width: 33%;
     padding: 0 12px;
+
+    -webkit-column-count: 3;
+    /* Chrome, Safari, iOS Safari */
+    -moz-column-count: 3;
+    /* Firefox */
+    -o-column-count: 3;
+    /* Opera */
+    -ms-column-count: 3;
+    /* Internet Explorer */
+
+    -webkit-column-width: 33%;
+    -moz-column-width: 33%;
+    -o-column-width: 33%;
+    -ms-column-width: 33%;
+
 }
 
 .gallery .pics:hover {
