--- a/src/components/Gallery/style.module.css
+++ b/src/components/Gallery/style.module.css
@@ -1,23 +1,8 @@
 .gallery {
     display:inline-block;
     column-count: 3;
-    column-width: 33%;
-    padding: 0 12px;
-
-    -webkit-column-count: 3;
-    /* Chrome, Safari, iOS Safari */
-    -moz-column-count: 3;
-    /* Firefox */
-    -o-column-count: 3;
-    /* Opera */
-    -ms-column-count: 3;
-    /* Internet Explorer */
-
-    -webkit-column-width: 33%;
-    -moz-column-width: 33%;
-    -o-column-width: 33%;
-    -ms-column-width: 33%;
-
+    /* column-width: 33%; */
+    padding: 0 12px; 
 }
 
 .gallery .pics:hover {
@@ -32,8 +17,8 @@
 
 @media (max-width:991px) {
     .gallery {
-        column-count: 3;
-        column-width: 33%;
+        column-count: 2;
+        /* column-width: 33%; */
         padding: 0 12px;
     }
 }
@@ -41,7 +26,7 @@
 @media (max-width:480px) {
     .gallery {
         column-count: 1;
-        column-width: 100%;
+        /* column-width: 100%; */
         padding: 0 12px;
     }
 }
